tests/ui/iterators/iter-macro-not-async-closure.stderr
error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:22:34
   |
LL |     let x = pin!(call_async_once(f));
   |                  --------------- ^ unsatisfied trait bound
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}`
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:11:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:22:18
   |
LL |     let x = pin!(call_async_once(f));
   |                  ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}`
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:11:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:22:13
   |
LL |     let x = pin!(call_async_once(f));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}`
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:11:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure.rs:26:5
   |
LL |     x.poll(&mut Context::from_waker(Waker::noop()));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure.rs:16:21: 16:28}`
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure.rs:11:34
   |
LL | async fn call_async_once(f: impl AsyncFnOnce()) {
   |                                  ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
